--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,24 +1,24 @@
 
+
+.search-page {
+  display: flex;
+  justify-content: center;
+}
+
+.search-left {
+  width: 20%;
+}
+
+.search-right {
+  width: 60%;
+  display: flex;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+}
+
 .results {
+  width: 33%;
   border: 1px solid black;
 }
 
 
-/* === typography ====== */ 
-
-/* h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, input, textarea, select, span {
-  color: white;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: bold;
-}
-
-p, li, td, th, blockquote, label, input, textarea, select {
-  font-size: 1.2rem;
-  line-height: 165%;
-}
-
-p {
-  margin-bottom: 1rem;
-} */
