--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -12,7 +12,7 @@
 .search-right {
   width: 60%;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   flex-wrap: wrap;
 }
 
