--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,12 +1,24 @@
 
+:root {
+  --dark: #21262d;
+  --light: #ecf2f8;
+  --orange: #faa356;
+  --purple: #cea5fb;
+}
+
+body {
+  color: var(--light);
+  background-color: var(--dark);
+}
 
 .search-page {
   display: flex;
   justify-content: center;
+  padding: 30px 200px;
 }
 
 .search-left {
-  width: 20%;
+  width: 40%;
 }
 
 .search-right {
@@ -14,6 +26,54 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  margin-left: 50px;
+}
+
+/* search form */
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.search-input {
+  width: 70%;
+  height: 35px;
+  border-radius: 15px;
+  font-size: 20px;
+  padding: 0 12px;
+}
+
+.search-button {
+  background-color: var(--purple);
+  width: 20%;
+  font-size: 20px;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 15px;
+  box-shadow: none;
+  cursor: pointer;
+}
+
+/* band list */
+
+.band-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.band-button {
+  background-color: var(--orange);
+  width: 90%;
+  font-size: 20px;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 15px;
+  box-shadow: none;
+  cursor: pointer;
 }
 
 .results {
@@ -21,4 +81,14 @@
   border: 1px solid black;
 }
 
+/* results */
 
+.band-image {
+  width: 100%;
+  height: auto;
+}
+
+.results {
+  display: flex;
+  width: 100%;
+}
