--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -22,11 +22,18 @@ body {
 }
 
 .search-right {
+  float: left;
   width: 60%;
+  padding-left: 20px;
+  box-sizing: border-box;
+  clear: both;
+
+
+  /* width: 60%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin-left: 50px;
+  margin-left: 50px; */
 }
 
 /* search form */
@@ -83,6 +90,12 @@ body {
 
 /* results */
 
+.band-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .band-image {
   width: 100%;
   height: auto;
@@ -91,4 +104,35 @@ body {
 .results {
   display: flex;
   width: 100%;
+  margin: 5px 0;
+  padding: 5px;
+}
+
+.results-left {
+  width: 20%;
+}
+
+.results-left p {
+  margin: 5px 0;
+}
+
+.results-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.results-info p {
+  margin: 5px 0;
+  padding-right: 5px;
+}
+
+.ticket-button {
+  background-color: var(--purple);
+  width: 20%;
+  font-size: 20px;
+  padding: 8px;
+  margin: 5px;
+  border-radius: 15px;
 }
