--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -1,4 +1,85 @@
+$text: #d6d6d6;
+$pink: #f2c4ce;
+$peach: #f58f7c;
+$dark: #388087;
+$medium: #6fb3b8;
+$light: #badfe7;
+$mint: #c2edce;
+
+
 
 body {
-    background-color: aquamarine;
+    background-color: #f6f6f2;
+    // background-image: linear-gradient(to bottom right, #4f4f51, #2c2b30);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+
+// search page
+
+.search-page {
+    display: flex;
+    justify-content: center;
+    padding: 20px 150px;
+
+    .search-left {
+        width: 50%;
+        border: 1px solid black;
+
+        .search-form {
+            display: flex;
+            height: 35px;
+            padding: 0 80px;
+
+            input {
+                width: 80%;
+                font-size: 20px;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
+                border: 1px solid black;
+            }
+
+            button {
+                width: 20%;
+                background-color: $medium;
+                font-size: 20px;
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+                border: 1px solid black;
+                cursor: pointer;
+            }
+        }
+
+        .band-list {
+            display: flex;
+            flex-direction: column;
+            padding: 0 80px;
+
+            button {
+                background-color: $light;
+                border-radius: 10px;
+                height: 35px;
+                border: 1px solid black;
+                margin-top: 5px;
+                font-size: 20px;
+                cursor: pointer;
+            }
+        }
+    }
+
+
+    .search-right {
+        width: 50%;
+        border: 1px solid black;
+
+        .band-header{
+
+
+            .band-image {
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
 }
